--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <a href="spotify.html">Spotify Playlist &rarr; Trackblaster Playlist </a>
   </div>
   <div class="row option header">
-      <a href="m3u.html">ITunes Playlist &rarr; Trackblaster Playlist </a>
+      <a href="m3u.html">ITunes M3U Playlist &rarr; Trackblaster Playlist </a>
   </div>
 
   <h2 class="header row sub2" >Help Files</h2>
