--- a/spotify.html
+++ b/spotify.html
@@ -25,6 +25,10 @@
       <input id="start_time" type="text" name="timepicker" class="timepicker col-md-2"/>
   </div>
 
+  <div class="row converter">
+	Open the playlist in spotify and select all (Ctrl+A) then copy (Ctrl+C) all the tracks. Paste (Ctrl+P) the tracks
+	in the text box below.
+  </div>
   <div class=" converter row">
     <div class="code col-md-5">
         <textarea id="input" class="code"
