--- a/spotify.html
+++ b/spotify.html
@@ -25,7 +25,7 @@
       <input id="start_time" type="text" name="timepicker" class="timepicker col-md-2"/>
   </div>
 
-  <div class="row converter">
+  <div class="row converter desc">
 	Open the playlist in spotify and select all (Ctrl+A) then copy (Ctrl+C) all the tracks. Paste (Ctrl+P) the tracks
 	in the text box below.
   </div>
