--- a/m3u.html
+++ b/m3u.html
@@ -23,6 +23,10 @@
 <body class="container">
 	<h2 class="row">Cue to TrackBlaster Converter</h2>
       
+	<div class="row desc ">
+		Export your ITunes playlist (File &rarr; Library &rarr; Export Playlist) as an M3U or M3U8 file, then upload or copy-paste
+		the file here
+	</div>
 	<div class="parameters row">
 		<div class="col-md-2">Show Time:</div>
 		<input id="start_time" type="text" class="timepicker col-md-2">
@@ -30,10 +34,7 @@
 		<div class="col-md-2">M3U File:</div>
 		<input class="col-md-3" id="file" type="file"></input>
 	</div>
-	<div class="row converter">
-		Export your ITunes playlist (File -> Library -> Export Playlist) as an M3U or M3U8 file, then upload or copy-paste
-		the file here
-	</div>
+	
 	<div class="row converter">
 		<div class="code col-md-5">
 			<textarea id="input" class="code" rows="20" cols="60" placeholder="paste your m3u file here"></textarea>
