--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
       <a href="spotify.html">Spotify Playlist &rarr; Trackblaster Playlist </a>
   </div>
   <div class="row option header">
-      <a href="m3u.html">ITunes M3U Playlist &rarr; Trackblaster Playlist </a>
+      <a href="itunes_xml.html">ITunes XML Playlist &rarr; Trackblaster Playlist </a>
   </div>
-
   <h2 class="header row sub2" >Help Files</h2>
   <div class="row option header">
       <a href="help.html">How to Import a Trackblaster Playlist to Trackblaster</a>
