--- a/spotify.html
+++ b/spotify.html
@@ -12,6 +12,9 @@
   	<script src="js/data.js"></script>
   	<script src="js/trackblaster.js"></script>
   	<script src="js/spotify.js"></script>
+  	<script src="js/spotify_web_api.js"></script>
+  	<script src="js/spotify_auth_appid.js"></script>
+  	<script src="js/spotify_auth.js"></script>
   	<script src="js/spotify_parser.js"></script>
 		
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
