added material for rendering

--- a/spotify.html
+++ b/spotify.html
@@ -1,10 +1,10 @@
 <head>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pegjs/0.9.0/peg.min.js"></script>
-      
+
 	<script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
-	
+
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	
+
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.0/moment.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
 
@@ -16,7 +16,7 @@
   	<script src="js/spotify_auth_appid.js"></script>
   	<script src="js/spotify_auth.js"></script>
   	<script src="js/spotify_parser.js"></script>
-		
+
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
   <link href="css/style.css" rel="stylesheet">
@@ -46,7 +46,8 @@
 
   </div>
   <div class="row download">
-	<button id="download" class="col-md-6">Download Trackblaster File</button>
+	<button id="download" class="col-md-5">Download Trackblaster File</button>
+	<button id="profanity" class="col-md-5">Test For Profanity</button>
   </div>
   <div class="row export-options">
 	  <div class="col-md-3 export-header">Export Options:</div>
@@ -58,4 +59,3 @@
   </div>
 
 </body>
-
