--- a/profanity.html
+++ b/profanity.html
@@ -55,9 +55,10 @@
                 <div class="col-md-3">Album</div>
                 </div>
                 <div class="templ row hidden">
-                <div class="song col-md-3"> </div>
-                <div class="artist col-md-3"> </div>
-                <div class="album col-md-3"> </div>
+									<div class="swatch loading"></div>
+                	<div class="song col-md-3"> </div>
+                	<div class="artist col-md-3"> </div>
+                	<div class="album col-md-3"> </div>
                 </div>
             </div>
         </div>
