--- a/profanity.html
+++ b/profanity.html
@@ -37,7 +37,8 @@
             <div id="track-year" class="track-field year">XXX</div>
 						</div>
             <div id="data-exists">
-								<div class="track-field bad-word-nav">
+								<div class="profanity-selector" ></div>
+								<div class="track-field bad-word-nav profanity-box">
 									<span class="template bad-word">bad word</span>
 								</div>
 
