--- a/profanity.html
+++ b/profanity.html
@@ -61,19 +61,22 @@
 
             <div id="details">
                 <div class="header row">
-                <div class="col-md-1"></div>
-                <div class="col-md-3">Song</div>
-                <div class="col-md-3">Artist</div>
-                <div class="col-md-3">Album</div>
+	                <div class="col-md-1"></div>
+	                <div class="col-md-3">Song</div>
+	                <div class="col-md-3">Artist</div>
+	                <div class="col-md-3">Album</div>
+									<div class="templ row hidden track-entry">
+											<div class="col-md-1">
+												<div class="swatch loading "></div>
+											</div>
+		                	<div class="song col-md-3"> </div>
+		                	<div class="artist col-md-3"> </div>
+		                	<div class="album col-md-3"> </div>
+		              </div>
                 </div>
-                <div class="templ row hidden track-entry">
-									<div class="col-md-1">
-										<div class="swatch loading "></div>
-									</div>
-                	<div class="song col-md-3"> </div>
-                	<div class="artist col-md-3"> </div>
-                	<div class="album col-md-3"> </div>
-                </div>
+								<div class="track-box">
+
+							  </div>
             </div>
         </div>
     </div>
