can jump to curse words

--- a/profanity.html
+++ b/profanity.html
@@ -112,7 +112,13 @@
                 <div class="sidebar-header">
                     <h3><span class="color-bar">&nbsp;&nbsp;</span>&nbsp;Lyrics</h3>
                 </div>
-                <div class="profanity-selector" ></div>
+                <div class="profanity-box" >
+                    <span class="templ hidden">
+                        <span class="word">XXX</span>
+                        (<span class="locs">XXX</span>
+                        <span class="len">XXX</span>)
+                    </span>
+                </div>
                 <div class="lyrics-box track-field steal-scroll"></div>
             </div>
 
