--- a/conv/index.html
+++ b/conv/index.html
@@ -3,6 +3,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My Application</title>
 
+    <link rel="stylesheet" type="text/css" href="src/index.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://unpkg.com/mithril/mithril.js"></script>
 
@@ -14,7 +16,9 @@
     <script src="src/spotify_api.js"></script>
     <script src="src/data.js"></script>
     <script src="src/view/view.js"></script>
-    <link rel="stylesheet" type="text/css" href="src/index.css">
+    <script src="src/view/tracklist.js"></script>
+    <script src="src/view/sidepanel.js"></script>
+    <script src="src/view/viewport.js"></script>
 </head>
 <body>
     <script>
