--- a/conv/index.html
+++ b/conv/index.html
@@ -28,11 +28,14 @@
      m.mount(root, viewport);
      var t1 = new Track("Vampire Kiss", "Nic Cage", "Doki Doki Love");
      t1.lyrics.add_line("never going to give you up");
-     t1.lyrics.add_line("never gonna let you down");
+     t1.lyrics.add_line("never turn you round and desert you");
+     t1.lyrics.add_line("never gonna let you down hell hmm");
      t1.lyrics.status = LyricStatus.UPLOADED;
+     scan_for_profanity(t1.lyrics);
      var t2 = new Track("Port of Call", "Nic Cage", "Doki Doki Love");
      t2.lyrics.add_line("fuck shit");
      t2.lyrics.status = LyricStatus.UPLOADED;
+     scan_for_profanity(t2.lyrics);
      var t3 = new Track("Leaving Las Vegas", "Nic Cage", "Doki Doki Love");
      tlist.add(t1);
      tlist.add(t2);
