--- a/conv/index.html
+++ b/conv/index.html
@@ -8,17 +8,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://unpkg.com/mithril/mithril.js"></script>
 
-    <script src="src/tokens.js"></script>
-    <script src="src/util.js"></script>
-    <script src="src/profanity_detector.js"></script>
-    <script src="src/mock.js"></script>
-    <script src="src/genius_api.js"></script>
-    <script src="src/spotify_api.js"></script>
     <script src="src/data.js"></script>
-    <script src="src/view/view.js"></script>
+    <script src="src/util.js"></script>
+
+    <script src="src/api/tokens.js"></script>
+    <script src="src/api/genius_api.js"></script>
+    <script src="src/api/spotify_api.js"></script>
+
+    <script src="src/model/genius.js"></script>
+    <script src="src/model/spotify.js"></script>
+    <script src="src/model/base.js"></script>
+    <script src="src/model/profanity_detector.js"></script>
+    <script src="src/model/mock.js"></script>
+
     <script src="src/view/tracklist.js"></script>
     <script src="src/view/sidepanel.js"></script>
     <script src="src/view/viewport.js"></script>
+    <script src="src/util.js"></script>
 </head>
 <body>
     <script>
