--- a/conv/index.html
+++ b/conv/index.html
@@ -29,24 +29,29 @@
 <body>
     <script>
      var root = document.body;
-     var tlist = new Playlist();
+        var tlist = new Playlist();
      var viewport = new Viewport(tlist);
      m.mount(root, viewport);
-     var t1 = new Track("Vampire Kiss", "Nic Cage", "Doki Doki Love");
-     t1.lyrics.add_line("never going to give you up");
-     t1.lyrics.add_line("never turn you round and desert you");
-     t1.lyrics.add_line("never gonna let you down hell hmm");
-     t1.lyrics.status = LyricStatus.UPLOADED;
-     scan_for_profanity(t1.lyrics);
-     var t2 = new Track("Port of Call", "Nic Cage", "Doki Doki Love");
-     t2.lyrics.add_line("fuck shit");
-     t2.lyrics.status = LyricStatus.UPLOADED;
-     scan_for_profanity(t2.lyrics);
-     var t3 = new Track("Leaving Las Vegas", "Nic Cage", "Doki Doki Love");
-     tlist.add(t1);
-     tlist.add(t2);
-     tlist.add(t3);
-     //model.salutation = "nihao";
+
+     function mockit(){
+        var tlist = new Playlist();
+        m.mount(root, viewport);
+        var t1 = new Track("Vampire Kiss", "Nic Cage", "Doki Doki Love");
+        t1.lyrics.add_line("never going to give you up");
+        t1.lyrics.add_line("never turn you round and desert you");
+        t1.lyrics.add_line("never gonna let you down hell hmm");
+        t1.lyrics.status = LyricStatus.UPLOADED;
+        scan_for_profanity(t1.lyrics);
+        var t2 = new Track("Port of Call", "Nic Cage", "Doki Doki Love");
+        t2.lyrics.add_line("fuck shit");
+        t2.lyrics.status = LyricStatus.UPLOADED;
+        scan_for_profanity(t2.lyrics);
+        var t3 = new Track("Leaving Las Vegas", "Nic Cage", "Doki Doki Love");
+        tlist.add(t1);
+        tlist.add(t2);
+        tlist.add(t3);
+         //model.salutation = "nihao";
+     }
     </script>
 </body>
 
