--- a/conv/index.html
+++ b/conv/index.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://unpkg.com/mithril/mithril.js"></script>
 
+    <script src="src/download.js"></script>
     <script src="src/data.js"></script>
     <script src="src/util.js"></script>
 
@@ -24,12 +25,11 @@
     <script src="src/view/tracklist.js"></script>
     <script src="src/view/sidepanel.js"></script>
     <script src="src/view/viewport.js"></script>
-    <script src="src/util.js"></script>
 </head>
 <body>
     <script>
      var root = document.body;
-        var tlist = new Playlist();
+     var tlist = new Playlist();
      var viewport = new Viewport(tlist);
      m.mount(root, viewport);
 
