--- a/conv/index.html
+++ b/conv/index.html
@@ -33,8 +33,8 @@
 <body>
     <script>
      var root = document.body;
-     //var mgr = new APIManager();
-     var mgr = new MockAPIManager();
+     var mgr = new APIManager();
+     //var mgr = new MockAPIManager();
      var viewport = new Viewport(mgr);
      m.mount(root, viewport);
 
