--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>My Application</title>
+    <title>Playlist Analysis Tool</title>
 
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 
